--- a/package.json
+++ b/package.json
@@ -10,9 +10,34 @@
   "author": "Qusz",
   "license": "ISC",
   "scripts": {
-    "start": "serve ./"
+    "build": "npm-run-all build:* postbuild",
+    "start": "npm-run-all public dev",
+    "start-watch": "npm-run-all public -p watch:*",
+    "dev": "wds --node-resolve --open \"/public/\"",
+    "postbuild": "postcss \"dist/main.css\" -u autoprefixer cssnano -r --no-map",
+    "public:html": "copyfiles -u 1 \"./src/*.html\" public",
+    "public:css": "copyfiles -u 1 \"./src/*.css\" public",
+    "public:js": "copyfiles -u 1 \"./src/js/**/*\" public",
+    "public:assets": "copyfiles -u 1 \"./src/assets/**/*\" public",
+    "public": "npm-run-all --parallel public:*",
+    "watch:html": "onchange \"src/**/*.html\" -- npm run public:html",
+    "watch:css": "onchange \"src/**/*.css\" -- npm run public:css",
+    "watch:js": "onchange \"src/**/*.js\" -- npm run public:js",
+    "watch:assets": "onchange \"src/assets/**/*\" -- npm run public:assets",
+    "watch:serve": "wds --node-resolve --watch --open \"/public/\"",
+    "build:html": "copyfiles -u 1 \"./src/*.html\" dist",
+    "build:css": "copyfiles -u 1 \"./src/*.css\" dist",
+    "build:js": "copyfiles -u 1 \"./src/js/**/*\" dist",
+    "build:assets": "copyfiles -u 1 \"./src/assets/**/*\" dist"
   },
   "devDependencies": {
-    "serve": "^14.1.1"
+    "@web/dev-server": "^0.1.34",
+    "autoprefixer": "^10.4.12",
+    "copyfiles": "^2.4.1",
+    "cssnano": "^5.1.14",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "postcss": "^8.4.18",
+    "postcss-cli": "^10.0.0"
   }
 }
